added panel in navbar

--- a/index.html
+++ b/index.html
@@ -48,6 +48,22 @@
                 Cart
             </div>
         </div>
+        <div class="panel">
+            <div class="panelall border">
+                <i class="fa-solid fa-bars"></i>
+                                All
+            </div>
+            <div class="panelopps">
+                <p class="border">Today's Deals</p>
+                  <p class="border">  Customer Service</p>
+                   <p class="border"> Registry</p>
+                    <p class="border">Gift Cards</p>
+                    <p class="border">Sell</p>
+            </div>
+            <div class="paneldeals border">
+                Shop deals in Electronics
+            </div>
+        </div>
     </header>
     
 </body>
