added hero section

--- a/index.html
+++ b/index.html
@@ -65,6 +65,10 @@
             </div>
         </div>
     </header>
-    
+    <div class="herosection">
+        <div class="heromsg">
+            <p>You are on amazon.com. You can also shop on Amazon for millions of products with fast local delivery. <a href="https://www.amazon.com/Nepal/s?k=Nepal">Click here to go to amazon Nepal.</a></p>
+        </div>
+    </div>
 </body>
 </html>
