added minishop and favicon

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Amazon</title>
+    <link rel="icon" href="images/amazonfav.png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="https://site-assets.fontawesome.com/releases/v6.4.2/css/all.css">
     <script src="https://kit.fontawesome.com/27061a3f4a.js" crossorigin="anonymous"></script>
@@ -70,5 +71,64 @@
             <p>You are on amazon.com. You can also shop on Amazon for millions of products with fast local delivery. <a href="https://www.amazon.com/Nepal/s?k=Nepal">Click here to go to amazon Nepal.</a></p>
         </div>
     </div>
+    <div class="shop-section">
+        <div class="box">
+            <div class="box-content">
+                <h2>Deals in PCs</h2>
+                <div class="box-image" style="background-image: url('images/box1.jpg');"></div>
+                <p>See more</p>
+            </div>
+        </div>
+        <div class="box">
+            <div class="box-content">
+                <h2>Indoor plants</h2>
+                <div class="box-image" style="background-image: url('images/box2.jpg');"></div>
+                <p>See more</p>
+            </div>
+        </div>
+        <div class="box">
+            <div class="box-content">
+                <h2>Home Items</h2>
+                <div class="box-image" style="background-image: url('images/box3.jpg');"></div>
+                <p>See more</p>
+            </div>
+        </div>
+        <div class="box">
+            <div class="box-content">
+                <h2>Dinnerware</h2>
+                <div class="box-image" style="background-image: url('images/box4.jpg');"></div>
+                <p>See more</p>
+            </div>
+        </div>
+        <div class="box">
+            <div class="box-content">
+                <h2>Kitchen Items</h2>
+                <div class="box-image" style="background-image: url('images/box5.jpg');"></div>
+                <p>See more</p>
+            </div>
+        </div>
+        <div class="box">
+            <div class="box-content">
+                <h2>Beauty Products</h2>
+                <div class="box-image" style="background-image: url('images/box6.jpg');"></div>
+                <p>See more</p>
+            </div>
+        </div>
+        <div class="box">
+            <div class="box-content">
+                <h2>Mobile's</h2>
+                <div class="box-image" style="background-image: url('images/box7.jpg');"></div>
+                <p>See more</p>
+            </div>
+        </div>
+        <div class="box">
+            <div class="box-content">
+                <h2>Washing Machine</h2>
+                <div class="box-image" style="background-image: url('images/box8.jpg');"></div>
+                <p>See more</p>
+            </div>
+        </div>
+    </div>
+    
 </body>
 </html>
