--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <header>
-        <div class="navbar">
+        <div class="navbar" id="TOP">
             
             <div class="navlogo border">
                 <div class="logo"></div>
@@ -129,6 +129,10 @@
             </div>
         </div>
     </div>
-    
+    <footer>
+        <div class="foot-panel1">
+           <a href="#TOP"> Back to Top</a>
+        </div>
+    </footer>
 </body>
 </html>
