--- a/index.html
+++ b/index.html
@@ -178,6 +178,15 @@
         <div class="foot-panel3">
             <div class="logo"></div>
         </div>
+        <div class="foot-panel4">
+            <div class="pages">
+                <a>Conditions of Use</a>
+                <a> Privacy Notice</a>
+                <a>Consumer Health Data Privacy Disclosure</a>
+                <a>Your Ads Privacy Choices</a>
+            </div>
+            <div class="copyright">&copy 1996-2024, Amazon.com, Inc. or its affiliates</div>
+        </div>
     </footer>
 </body>
 </html>
