--- a/index.html
+++ b/index.html
@@ -176,12 +176,12 @@
                 </ul>
         </div>
         <div class="foot-panel3">
-            <div class="logo"></div>
+            <div class="logo1"></div>
         </div>
         <div class="foot-panel4">
             <div class="pages">
                 <a>Conditions of Use</a>
-                <a> Privacy Notice</a>
+                <a>Privacy Notice</a>
                 <a>Consumer Health Data Privacy Disclosure</a>
                 <a>Your Ads Privacy Choices</a>
             </div>
